# plugify-plugin-configs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  cpp.hint  plugify-configs.json  plugify-configs.pplugin  plugify-configs.pplugin.in  plugify-plugin-configs.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
cmake/: FetchGlaze.cmake
conda/: bld.bat  build.sh  meta.yaml.example
include/plugify-configs/: methods.hpp  plugify-configs.hpp
src/: binding.cpp  binding.hpp  config.cpp  config.hpp  methods.cpp  plugin.cpp  plugin.hpp  readerfactory.cpp  readerfactory.hpp
src/readers/: json_glaze.cpp  json_glaze.hpp
sym/: exported_symbols.lds  version_script.lds
